2022-01-10, S3QL 3.8.1

  * Update fsck.s3ql to remove empty direcrtories from local backend's storage
    directory.  As blocks are added subdirectories are created
    on demand so there are not too many blocks in each directory, but as blocks
    are removed from storage empty directories are not automatically removed.
    The number of empty directories can become quite large over
    time, slowing down mount.s3ql a little and fsck.s3ql considerably.

  * Fix for fsck.s3ql removing .tmp files in cache directory.

  * Fix bug that would cause incorrect size to be recorded for a block
    if the file had zero-bytes added to the end by using truncate followed
    by close.  (The recorded size does not count the zero bytes.)  Both rsync's
    -S (sparse) option and VirtualBox do this for example. No data corruption,
    but contrib/fixup_block_sizes.py should be run to fix this.

  * contrib/fix_block_sizes.py updated to check all block sizes, not just
    ones with size multiple of 512, so it detects blocks affected by the above
    bug.

2021-11-07, S3QL 3.8.0

  * The way to build the documentation has changed. Instead of running
    `setup.py build_sphinx`, run `./build_docs.sh`. To generate PDF
    documentation, follow this with `cd doc/pdf && make`.

  * The `s3ql_verify` tool is now able to detect the kind of corruption that
    was introduced by the fsck.s3ql data corruption bug described below.

  * The new contrib/fixup_block_sizes.py tool is now available to fix most of
    the issues caused by the fsck.s3ql bug described below.

2021-06-03, S3QL 3.7.3

  * Fixed a DATA CORRUPTION bug in fsck.s3ql that caused the recorded size of uploaded
    dirty blocks to be rounded up to the next multiple of 512 bytes, effectively appending
    up to 512 zero-bytes to the end of affected files.

    This problem was introduced in version 3.4.1 (released 2020-05-08) as part of a
    seemingly very minor improvement to cache usage calculation.
